kubernetes/rekreativ-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rekreativ-ingress
  labels:
    name: rekreativ-ingress
spec:
  rules:
  - host: myapp.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rekreativ
            port: 
              number: 80
